--- a/src/EtlBundle/Resources/config/services.yml
+++ b/src/EtlBundle/Resources/config/services.yml
@@ -1,4 +1,3 @@
 services:
-#    etl.example:
-#        class: EtlBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    jbreton_php_etl.process_lister:
+        class: EtlBundle\Container\ProcessLister
