--- a/src/SampleEtlBundle/Resources/config/services.yml
+++ b/src/SampleEtlBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 services:
     sample_etl_bundle.process:
-        class: \Swift_SendmailTransport
+        class: SampleEtlBundle\Process\SampleProcess
         tags:
             -  { name: jbreton_php_etl.process }
