--- a/src/EtlBundle/Resources/config/services.yml
+++ b/src/EtlBundle/Resources/config/services.yml
@@ -1,3 +1,7 @@
 services:
     jbreton_php_etl.process_lister:
         class: EtlBundle\Container\ProcessLister
+    jbreton_php_etl.formatter:
+        class: Symfony\Bridge\Monolog\Formatter\ConsoleFormatter
+        arguments:
+            - "[%%datetime%%][%%channel%%][%%start_tag%%%%level_name%%%%end_tag%%]\t%%message%%\t%%context%%\t%%extra%%\n"
